# projects

./: README.md
algorithms_data_structures/001_binary_search_tree/: CMakeLists.txt
algorithms_data_structures/001_binary_search_tree/lib/: CMakeLists.txt
algorithms_data_structures/001_binary_search_tree/src/: main.c
algorithms_data_structures/002_graph/: Makefile
algorithms_data_structures/002_graph/src/: graph.c  graph.h
algorithms_data_structures/002_graph/test/: test_graph.c
algorithms_data_structures/003_matching_pairs/: Makefile
algorithms_data_structures/003_matching_pairs/src/: matching_pairs.c
algorithms_data_structures/004_sort_ints/: Makefile
algorithms_data_structures/004_sort_ints/src/: sort.c
algorithms_data_structures/005_number_box/: CMakeLists.txt  README.md
algorithms_data_structures/005_number_box/lib/nbox/: CMakeLists.txt  nbox.c  nbox.h
algorithms_data_structures/005_number_box/src/: main.c
algorithms_data_structures/006_hash_table/: CMakeLists.txt
daemon/: daemon.c
math/: Makefile  main.c  math.c  math.h
memory/001_dynamic/001/: Makefile  main.c
memory/002_pointer_copy_by_value/: main.c
opaque_pointer/: CMakeLists.txt
opaque_pointer/lib/: CMakeLists.txt
opaque_pointer/lib/link/: link.c  link.h
opaque_pointer/src/: main.c
parsing/: CMakeLists.txt
parsing/src/: main.c
primes/: CMakeLists.txt
primes/lib/prime/: prime.c  prime.h
primes/src/: main.c
state_machine/: CMakeLists.txt
state_machine/lib/: state_machine.h
state_machine/src/: main.c
threads/: main.c
time/: Makefile
time/src/: main.c
(+7 files in other folders)
